--- a/GreedySnake/GreedySnake/GreedySnake.vcxproj
+++ b/GreedySnake/GreedySnake/GreedySnake.vcxproj
@@ -77,7 +77,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>E:\study file\GreedySnake\GreedySnake\GreedySnake\src;E:\study file\GreedySnake\GreedySnake\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\study file\GreedySnake\GreedySnake\Image;E:\study file\GreedySnake\GreedySnake\GreedySnake\src;E:\study file\GreedySnake\GreedySnake\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -114,11 +114,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\modSnake.cpp" />
     <ClCompile Include="..\src\snake.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\modSnake.h" />
     <ClInclude Include="..\include\snake.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Image\down.jpg" />
+    <Image Include="..\Image\food.png" />
+    <Image Include="..\Image\left.jpg" />
+    <Image Include="..\Image\right.jpg" />
+    <Image Include="..\Image\snake.png" />
+    <Image Include="..\Image\up.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
